Add fancyperks package and import FancyLib

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: FancyPerks
-main: de.oliver.FancyPerks
+main: de.oliver.fancyperks.FancyPerks
 author: OliverHD
 version: 1.0.0
 api-version: 1.19
