--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: de.oliver.fancyperks.FancyPerks
 author: OliverHD
 version: 1.0.1
 api-version: 1.19
+folia-supported: true
 loadbefore:
   - Vault
   - Essentials
