--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 name: FancyPerks
-main: de.oliver.fancyperks.FancyPerks
+description: $description
 author: OliverHD
-version: 1.1.0
-api-version: 1.19
+version: $version
 folia-supported: true
+main: de.oliver.fancyperks.FancyPerks
+api-version: 1.19
 loadbefore:
   - Vault
   - Essentials
